# pyscript

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: hello_world.py
src/: py_script.py
src/pyscript/: __init__.py  const.py  core.py  exceptions.py  script_class.py  utils.py
